[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.11.0",
    "google-api-python-client>=2.174.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "openai>=1.93.0",
    "pypdf>=5.7.0",
    "streamlit>=1.46.1",
]
